--- a/app/Resources/views/Cookie/index.html.twig
+++ b/app/Resources/views/Cookie/index.html.twig
@@ -22,9 +22,11 @@
             {{ cookie.bakerUsername }}
           </td>
           <td>
-            <form action="{{ path('cookie_nom', {'id': cookie.id}) }}" method="POST">
-              <button type="submit" class="btn">NOM! <i class="glyphicon glyphicon-cutlery"></i></button>
-            </form>
+            {% if cookie.bakerUsername == app.user.username %}
+              <form action="{{ path('cookie_nom', {'id': cookie.id}) }}" method="POST">
+                <button type="submit" class="btn">NOM! <i class="glyphicon glyphicon-cutlery"></i></button>
+              </form> 
+            {% endif %}
           </td>
         </tr>
       {% endfor %}
