Remember the goal of this was to centralize our logic. So now we can go into our Twig template and do the exact same thing there. We’ll use the is_granted function, pass it nom and pass it the cookie object. And as you might expect, when we refresh, we see the exact same results as before except everything is pulling from that central voter.

--- a/app/Resources/views/Cookie/index.html.twig
+++ b/app/Resources/views/Cookie/index.html.twig
@@ -22,7 +22,7 @@
             {{ cookie.bakerUsername }}
           </td>
           <td>
-            {% if cookie.bakerUsername == app.user.username %}
+            {% if is_granted('NOM', cookie) %}
               <form action="{{ path('cookie_nom', {'id': cookie.id}) }}" method="POST">
                 <button type="submit" class="btn">NOM! <i class="glyphicon glyphicon-cutlery"></i></button>
               </form> 
