Adding Multiple Actions (NOM, DONATE) to 1 Voter
I want to do one more crazy thing. Let’s pretend like we want to be able to donate our cookies to friends. Now I know that’s crazy why would you donate cookies to other people? But let’s just try it out. I don’t actually have the logic for this but that’s okay. Let’s go into index.html.twig and add a link for this. We’re just going to see if we can get the link to hide and show correctly.

Just like before I’m inventing this DONATE string. If we don’t do anything else and refresh, we’ll actually see that the link doesn’t show up. If no voters vote on our attribute, then by default it’s going to return false. Now why is our voter not voting on it? Because of the getSupportedAttributes function.

--- a/app/Resources/views/Cookie/index.html.twig
+++ b/app/Resources/views/Cookie/index.html.twig
@@ -28,6 +28,11 @@
               </form> 
             {% endif %}
           </td>
+          <td>
+             {% if is_granted('DONATE', cookie) %} 
+               <a href="">Donate</a>
+             {% endif %} 
+          </td>
         </tr>
       {% endfor %}
     </tbody>
